Fix issue with Firefox not showing the navigation logo (a.logo).
- Added width to a.logo

--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -140,6 +140,7 @@ div.mobile-only.nav-menu {
       a.logo {
         line-height: 70px;
         height: 70px;
+        width: 107.875px;
       }
     }
     ul.tablet.nav-menu {
